Prevented the page from jumping when changing syntax without using display: none

--- a/_sass/components/_syntax-toggle.scss
+++ b/_sass/components/_syntax-toggle.scss
@@ -14,10 +14,12 @@
 
 /**
  * Syntax toggle checkbox
- * 1. Only way I found to prevent page jump when clicking label
+ * 1. Prevent the page from jumping
  */
 #syntax-toggle {
-  display: none; /* 1 */
+  @include respond-to('medium') {
+    position: fixed; /* 1 */
+  }
 
   &:checked ~ .code-block > [data-syntax="sass"] {
     display: block;
